slider scrollbar fixed

--- a/src/app.scss
+++ b/src/app.scss
@@ -86,6 +86,28 @@ h3 {
 	line-height: clamp(2.8rem, 3.5vw, 3.6rem);
 }
 
+.custom_slider_scrollbar {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+
+	width: 66%;
+	height: .6rem;
+
+	border-radius: .4rem;
+	background-color: #434F70 !important;
+	z-index: 5;
+	left: 50%;
+	transform: translate(-57%, 0);
+	
+	@media screen and (max-width: $point768) {
+		& {
+			width: 90%;
+			transform: translate(-53%, 0);
+		}
+	}
+}
+
 .button_common {
 	position: relative;
 
@@ -155,11 +177,4 @@ h3 {
 	}
 }
 
-.some {
-	position: absolute;
-	bottom: 20px;
-	width: 80%;
-	height: 10px;
-	background-color: rgb(133, 127, 255)!important;
-	z-index: 101;
-}
+
